--- a/public/index.html
+++ b/public/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="%PUBLIC_URL%/favicon/favicon.ico" type="image/x-icon" />
-    <title>Akash's Portfolio</title>
+    <link rel="icon" href="%PUBLIC_URL%/favicon/nicd.ico" type="image/x-icon" />
+    <title>Ico's Portfolio</title>
 </head>
 <body>
     <div id="root"></div>
